--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section id="model">
         <div class="line"></div>
         <h1>Modelo Tinkercad</h1>
-        <a class="article" href="" target="_blank">Link para el Modelo</a>
+        <a class="article" href="https://www.tinkercad.com/things/fiGjGA8cdU3" target="_blank">Link para el Modelo</a>
     </section>
 
 
